[gd_scene load_steps=28 format=3 uid="uid://djy2016ltpax8"]

[ext_resource type="Script" uid="uid://df36liqp44nvt" path="res://scripts/player.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://bxxgttfca1v8j" path="res://scripts/camera_system.gd" id="2_sweqy"]
[ext_resource type="AudioStream" uid="uid://br7p0j66p3phx" path="res://assets/revolver_shot1.wav" id="3_i3pqv"]
[ext_resource type="Texture2D" uid="uid://darq3cjam66qr" path="res://assets/шагает сука.png" id="3_tuyoq"]
[ext_resource type="Texture2D" uid="uid://b54mgcg8vceee" path="res://assets/спрайт бам4.png" id="4_fjrip"]
[ext_resource type="Texture2D" uid="uid://cnxhd1rylf0yo" path="res://assets/перезарядка нахуй.png" id="5_tuyoq"]
[ext_resource type="Texture2D" uid="uid://bynviq3jdeoq8" path="res://assets/виньетка йоу 3 хп.png" id="6_fjrip"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_onrkg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("3_tuyoq")
region = Rect2(0, 0, 898, 898)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("3_tuyoq")
region = Rect2(0, 0, 898, 898)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("3_tuyoq")
region = Rect2(898, 0, 898, 898)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("3_tuyoq")
region = Rect2(1796, 0, 898, 898)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("3_tuyoq")
region = Rect2(2694, 0, 898, 898)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("3_tuyoq")
region = Rect2(3592, 0, 898, 898)

[sub_resource type="SpriteFrames" id="SpriteFrames_l71n6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("4_fjrip")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("5_tuyoq")
region = Rect2(0, 0, 508, 508)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("5_tuyoq")
region = Rect2(508, 0, 508, 508)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("5_tuyoq")
region = Rect2(1016, 0, 508, 508)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("5_tuyoq")
region = Rect2(1524, 0, 508, 508)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("5_tuyoq")
region = Rect2(2032, 0, 508, 508)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("5_tuyoq")
region = Rect2(2540, 0, 508, 508)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("4_fjrip")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("4_fjrip")
region = Rect2(480, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("4_fjrip")
region = Rect2(960, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("4_fjrip")
region = Rect2(1440, 0, 480, 480)

[sub_resource type="SpriteFrames" id="SpriteFrames_nvl01"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}],
"loop": false,
"name": &"Reload",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": false,
"name": &"Shoot",
"speed": 5.0
}]

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_4flbx")

[node name="CameraSystem" type="Node" parent="."]
script = ExtResource("2_sweqy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_onrkg")

[node name="FPCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
cull_mask = 1048573

[node name="RayCast3D" type="RayCast3D" parent="FPCamera"]
top_level = true
target_position = Vector3(0, -10000, 0)
collision_mask = 3
debug_shape_custom_color = Color(0.20965287, 0.4785878, 0.87546223, 1)
debug_shape_thickness = 1

[node name="TDCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 6.776492, 0)
keep_aspect = 0
cull_mask = 1048574

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(-1.1146404e-08, 0.255, -1.1146404e-08, 0, -1.1146404e-08, -0.255, -0.255, -1.1146404e-08, 4.872248e-16, 0.005, 2, -0.615)
layers = 2
sprite_frames = SubResource("SpriteFrames_l71n6")
animation = &"Walk"
autoplay = "Idle"
frame_progress = 0.09625713

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TDViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(1920, 540)
offset_top = 540.0
offset_right = 1920.0
offset_bottom = 1080.0
stretch_shrink = 2

[node name="ViewportTD" type="SubViewport" parent="CanvasLayer/TDViewportContainer"]
handle_input_locally = false
render_target_update_mode = 4

[node name="FPViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(1920, 540)
offset_right = 1920.0
offset_bottom = 540.0
stretch_shrink = 2

[node name="ViewportFP" type="SubViewport" parent="CanvasLayer/FPViewportContainer"]
handle_input_locally = false
render_target_update_mode = 4

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer"]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="FP" type="Control" parent="CanvasLayer/VSplitContainer"]
custom_minimum_size = Vector2(0, 540)
layout_mode = 2

[node name="GunBase" type="Control" parent="CanvasLayer/VSplitContainer/FP"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -50.0
offset_bottom = -10.001343
grow_horizontal = 0
grow_vertical = 0

[node name="GunSprite" type="AnimatedSprite2D" parent="CanvasLayer/VSplitContainer/FP/GunBase"]
position = Vector2(-200, -203)
sprite_frames = SubResource("SpriteFrames_nvl01")
animation = &"Shoot"
autoplay = "Idle"

[node name="Ammo" type="Label" parent="CanvasLayer/VSplitContainer/FP"]
layout_mode = 0
offset_left = 62.0
offset_top = 455.0
offset_right = 368.0
offset_bottom = 584.0
theme_override_font_sizes/font_size = 41
text = "7/35"
horizontal_alignment = 1

[node name="TD" type="Control" parent="CanvasLayer/VSplitContainer"]
custom_minimum_size = Vector2(0, 540)
layout_mode = 2

[node name="HpHud" type="Sprite2D" parent="CanvasLayer/VSplitContainer"]
position = Vector2(960.5001, 274.5)
scale = Vector2(1.5991666, 0.90833336)
texture = ExtResource("6_fjrip")

[node name="CrossHair" type="ColorRect" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.32, 0.32)
pivot_offset = Vector2(20, 20)
color = Color(1, 1, 1, 0.76862746)

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i3pqv")
bus = &"Sfx"
